--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ header .overlay {
       <a class="navbar-brand" href="#about">About</a>
       <a class="navbar-brand" href="#resources">Resources</a>
       <a class="navbar-brand" href="#contact">Contact</a>
-      <a class="navbar-brand" href="https://campbellcollaboration.org/">Campbell Collaboration</a>
+      <a class="navbar-brand" href="https://campbellcollaboration.org/about-campbell/coordinating-groups/climate-solutions.html">Campbell Collaboration</a>
     </div>
   </nav>
 
@@ -219,7 +219,7 @@ header .overlay {
           <br>
           <h2>Useful resources</h2>
           <ul class="lead mb-0">
-              <li>Online Training in Evidence Synthesis Methods</li>
+              <li><a href="https://synthesistraining.github.io/" target="_blank">Online Training in Evidence Synthesis Methods</a></li>
           </ul>
         </div>
       </div>
@@ -229,7 +229,7 @@ header .overlay {
           <p style="text-align:right"><a style="text-decoration:none" href=#><i class="fa fa-home fa-2x m-auto text-primary"></i></a></p>
           <br>
           <h2>Contact us</h2>
-          <p class="lead mb-0">If you would like to know more about the activities of the group, or if you would like to find out more about how to get involved (including commissioning training courses, publishing systematic reviews or maps, or supporting the group's activities, please <a href="mailto:email@address.com">email us</a>.</p>
+          <p class="lead mb-0">If you would like to know more about the activities of the group, or if you would like to find out more about how to get involved (including commissioning training courses, publishing systematic reviews or maps, or supporting the group's activities, please <a href="mailto:climate@campbellcollaboration.org">email us</a>.</p>
         </div>
       </div>
     </div>
@@ -259,7 +259,7 @@ header .overlay {
             </li>
             <li class="list-inline-item">&sdot;</li>
             <li class="list-inline-item">
-              <a href="https://campbellcollaboration.org/">Campbell Collaboration</a>
+              <a href="https://campbellcollaboration.org/about-campbell/coordinating-groups/climate-solutions.html">Campbell Collaboration</a>
             </li>
           </ul>
           <p class="text-muted small mb-4 mb-lg-0">&copy; Neal Haddaway 2020. All Rights Reserved.</p>
