--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@ header .overlay {
   <!-- Image Showcases -->
   <section class="showcase">
     <div class="container-fluid p-0">
-      <div class="row no-gutters">
-        <div class="col-lg-5 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
-        <div class="col-lg-7 order-lg-1 my-auto showcase-text" id=about>
+      <div class="row justify-content-center">
+        <div class="col-lg-2 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
+        <div class="col-lg-5 order-lg-1 my-auto showcase-text" id=about>
           <p><a style="text-decoration:none" href=#><i class="fa fa-home fa-2x m-auto text-primary"></i></a></p>
           <br>
           <h2>About the CSCG</h2>
@@ -181,21 +181,20 @@ header .overlay {
           <p class="lead mb-0">We aim to bring together the systematic review community on climate in the Campbell Collaboration, Cochrane as well as the Collaboration for Environmental Evidence with scholars from the climate change community that have organised around institutions like the IPCC, IPBES or UN emissions and adaptation gap reports.</p>
         </div>
       </div>
-      <div class="row no-gutters">
-        <div class="col-lg-5 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
-        <div class="col-lg-7 my-auto showcase-text" id=team>
+      <div class="row justify-content-center">
+        <div class="col-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
+        <div class="col-lg-5 my-auto showcase-text" id=team>
           <p style="text-align:right"><a style="text-decoration:none" href=#><i class="fa fa-home fa-2x m-auto text-primary"></i></a></p>
-          <br>
           <h2>Who we are</h2>
             <p class="lead mb-0">Editorial Team</p>
           <ul class="lead mb-0">
               <li>Jan C Minx (co-chair), Mercator Research Institute on Global Commons and Climate Change and Leeds University</li>
               <li>Neal R Haddaway (co-chair), Mercator Research Institute on Global Commons and Climate Change and Stockholm Environment Institute</li>
+              <li>Friederike Döbbe (Managing Editor), Stockholm School of Economics</li>
               <li>Lea Berrang-Ford, Leeds University</li>
               <li>Ruth Garside, Exeter University</li>
               <li>William Lamb, Mercator Research Institute on Global Commons</li>
               <li>Wolfgang Viechtbauer, Maastricht University</li>
-              <li>Friederike Döbbe (Managing Editor), Stockholm School of Economics</li>
             </ul>
             <br>
           <p class="lead mb-0">Advisory Board</p>
@@ -211,9 +210,9 @@ header .overlay {
             </ul>
         </div>
       </div>
-      <div class="row no-gutters">
-        <div class="col-lg-5 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
-        <div class="col-lg-7 order-lg-1 my-auto showcase-text" id=resources>
+      <div class="row justify-content-center">
+        <div class="col-lg-2 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
+        <div class="col-lg-5 order-lg-1 my-auto showcase-text" id=resources>
           <p><a style="text-decoration:none" href=#><i class="fa fa-home fa-2x m-auto text-primary"></i></a></p>
           <br>
           <h2>Useful resources</h2>
@@ -222,9 +221,9 @@ header .overlay {
           </ul>
         </div>
       </div>
-      <div class="row no-gutters">
-        <div class="col-lg-5 order-lg-1 text-white showcase-img" style="background-image: url('img/bg-showcase-4.jpg');"></div>
-        <div class="col-lg-7 order-lg-2 my-auto showcase-text" id=contact>
+      <div class="row justify-content-center">
+        <div class="col-lg-2 order-lg-1 text-white showcase-img" style="background-image: url('img/bg-showcase-4.jpg');"></div>
+        <div class="col-lg-5 order-lg-2 my-auto showcase-text" id=contact>
           <p style="text-align:right"><a style="text-decoration:none" href=#><i class="fa fa-home fa-2x m-auto text-primary"></i></a></p>
           <br>
           <h2>Contact us</h2>
