--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@ header .overlay {
           <h2>Useful resources</h2>
           <ul class="lead mb-0">
               <li><a href="https://synthesistraining.github.io/" target="_blank">Online Training in Evidence Synthesis Methods</a></li>
+              <li><a href="https://campbellcollaboration.org/about-campbell/coordinating-groups/climate-solutions.html">CSCG webpage on the Campbell Collaboration website</a></li>
           </ul>
         </div>
       </div>
