--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ header .overlay {
           <p><a style="text-decoration:none" href=#><i class="fa fa-home fa-2x m-auto text-primary"></i></a></p>
           <br>
           <h2>About the CSCG</h2>
-          <p class="lead mb-0">The mission of the Campbell Coordinating Group on Climate Solutions (CGCS) is to coordinate, facilitate and encourage the production, updating and accessibility of high quality systematic reviews.</p>
+          <p class="lead mb-0">The mission of the Campbell Coordinating Group on Climate Solutions (CGCS) is to coordinate, facilitate and encourage the production, updating and accessibility of high quality systematic reviews relevant to the impacts of climate on society and the effects and effectiveness of solutions to the climate crisis.</p>
           <br>
           <p class="lead mb-0">We recognize the urgency of preventing the climate crisis through sound climate policy. There is a rapidly closing time window for keeping global warming well below 2°C in line with the Paris Agreement: the most recent science assessment by the Intergovernmental Panel on Climate Change (IPCC) highlight that the global transition towards a carbon-neutral society needs to be organized within the next few decades. Given the scale of the challenge and limited resources, it is paramount that this transition is informed by the best available science on what climate solutions work under what conditions and why. Building an evidence synthesis community that generates such solution-oriented knowledge is the central remit of our group.</p>
           <br>
